@@ -13,6 +13,4 @@ WORKDIR /app
 
 EXPOSE 8080:80
 
-CMD ["java", "-server", "-XX:+UnlockExperimentalVMOptions", "-XX:+UseCGroupMemoryLimitForHeap",
-"-XX:InitialRAMFraction=2", "-XX:MinRAMFraction=2", "-XX:MaxRAMFraction=2", "-XX:+UseG1GC",
-"-XX:MaxGCPauseMillis=100", "-XX:+UseStringDeduplication", "-jar", "portfolio-0.0.1.jar"]
+CMD ["java", "-server", "-jar", "portfolio-0.0.1.jar"]
